--- a/app/views/layouts/client.html.erb
+++ b/app/views/layouts/client.html.erb
@@ -57,10 +57,10 @@
       <h4>Stuff</h4>
       <ul class="side_nav">
         <li><%= link_to "Current Recordings >>", songs_path %></li>
-        <li><%= link_to "Facebook >>", "http://www.facebook.com/pages/Barcode-Channel/126967277330061", :target => "_blank" %></li>
-        <li><%= link_to "Myspace >>", "http://myspace.com/barcodechannel", :target => "_blank" %></li>
-        <li><%= link_to "Bandcamp >>", "http://barcodechannel.bandcamp.com/", :target => "_blank" %></li>
         <li><%= link_to "Soundcloud >>", "http://soundcloud.com/barcode-channel", :target => "_blank" %></li>
+        <li><%= link_to "Facebook >>", "http://www.facebook.com/pages/Barcode-Channel/126967277330061", :target => "_blank" %></li>
+        <li><%= link_to "Bandcamp >>", "http://barcodechannel.bandcamp.com/", :target => "_blank" %></li>
+        <li><%= link_to "YouTube >>", "http://www.youtube.com/user/BarcodeChannel", :target => "_blank" %></li>
       </ul>
     </div>
 
