Updated styles, added favicon

--- a/app/views/static/promo.html.erb
+++ b/app/views/static/promo.html.erb
@@ -1,11 +1,11 @@
 <div class="news_post">
   <div class="post_title">
-    <h2>Hi </h2>
+    <h2>Hi Blogger</h2>
   </div>
   <div id="promo_txt" class="post_body">
 
     <p>
-      We've been checking out your blog and you feature a lot of really good music. Since you seem to like independant/alternative music, we thought you might like to check us out:
+      We've been checking out your blog and you feature a lot of really good music. Since you seem to like independent/alternative sounds, we thought you might like to check us out.
     </p>
     <p>
       We are <b>Barcode Channel</b>. We are a post punk/indie rock 3-piece with a DIY ethic who write songs around angular guitar lines and programmed beats, drawing influence from artists such as <b>Radiohead</b>, <b>Foals</b>, <b>Bloc Party</b> and <b>Interpol</b>.
@@ -38,7 +38,7 @@
 
       <h4>More about us</h4>
       <p>
-        We've got a full <b>biography/manifesto</b>, <b>news</b> and <b>photos</b> on our website, and more relevant links:
+        We've got a full <b>biography/manifesto</b>, <b>news</b>, <b>photos</b> and <b>videos</b> on our website, alongside more relevant links:
         <ul>
           <li><%= link_to "www.barcodechannel.com", 'http://barcodechannel.com' %></li>
         </ul>
