--- a/app/views/layouts/client.html.erb
+++ b/app/views/layouts/client.html.erb
@@ -3,6 +3,7 @@
   <title>
     Barcode Channel
   </title>
+  <link rel="shortcut icon" href="favicon.ico" />
   <link rel="stylesheet" href="/stylesheets/blueprint/screen.css" type="text/css" media="screen, projection">
   <link rel="stylesheet" href="/stylesheets/blueprint/print.css" type="text/css" media="print">
   <!--[if lt IE 8]>
