--- a/app/views/layouts/client.html.erb
+++ b/app/views/layouts/client.html.erb
@@ -4,13 +4,13 @@
     Barcode Channel
   </title>
   <link rel="shortcut icon" href="favicon.ico" />
-  <link rel="stylesheet" href="/stylesheets/blueprint/screen.css" type="text/css" media="screen, projection">
-  <link rel="stylesheet" href="/stylesheets/blueprint/print.css" type="text/css" media="print">
   <!--[if lt IE 8]>
       <link rel="stylesheet" href="css/blueprint/ie.css" type="text/css" media="screen, projection">
     <![endif]-->
-  <%= stylesheet_link_tag 'global', 'formtastic', 'formtastic_changes' %>
-  <%= javascript_include_tag :defaults %>
+  <link rel="stylesheet" href="/stylesheets/blueprint/print.css" type="text/css" media="print">
+  <%= include_stylesheets :common, :media => 'all' %>
+  <%= javascript_include_tag 'https://ajax.googleapis.com/ajax/libs/jquery/1.6.0/jquery-min.js' %>
+  <%= include_javascripts :workspace %>
   <%= csrf_meta_tag %>
   
   <script type="text/javascript">
