jquery min link corrected

--- a/app/views/layouts/client.html.erb
+++ b/app/views/layouts/client.html.erb
@@ -9,7 +9,7 @@
     <![endif]-->
   <link rel="stylesheet" href="/stylesheets/blueprint/print.css" type="text/css" media="print">
   <%= include_stylesheets :common, :media => 'all' %>
-  <%= javascript_include_tag 'https://ajax.googleapis.com/ajax/libs/jquery/1.6.0/jquery-min.js' %>
+  <%= javascript_include_tag 'https://ajax.googleapis.com/ajax/libs/jquery/1.6.0/jquery.min.js' %>
   <%= include_javascripts :workspace %>
   <%= csrf_meta_tag %>
   
