Using PJAX for ajax page loading

--- a/app/views/layouts/client.html.erb
+++ b/app/views/layouts/client.html.erb
@@ -49,7 +49,7 @@
     <div style="color: green; float: none"><%= flash[:notice] %></div>
     <div style="background-color: yellow; float: none"><%= flash[:warning] %></div>
     <div style="background-color: red; float: none"><%= flash[:error] %></div>
-    <div>
+    <div id='main'>
       <%= yield %>
     </div>
   </div>
