--- a/app/views/layouts/client.html.erb
+++ b/app/views/layouts/client.html.erb
@@ -55,13 +55,28 @@
   </div>
   <div class="span-6 last">
     <div class="side_panel bottom_rounded, top_rounded">
-      <h4>Stuff</h4>
+      <h4>Other Sites</h4>
       <ul class="side_nav">
-        <li><%= link_to "Current Recordings >>", songs_path %></li>
-        <li><%= link_to "Soundcloud >>", "http://soundcloud.com/barcode-channel", :target => "_blank" %></li>
-        <li><%= link_to "Facebook >>", "http://www.facebook.com/pages/Barcode-Channel/126967277330061", :target => "_blank" %></li>
-        <li><%= link_to "Bandcamp >>", "http://barcodechannel.bandcamp.com/", :target => "_blank" %></li>
-        <li><%= link_to "YouTube >>", "http://www.youtube.com/user/BarcodeChannel", :target => "_blank" %></li>
+        <li>
+          <%= link_to "http://soundcloud.com/barcode-channel", :target => "_blank" do %>
+            <%= image_tag('icons/soundcloud.png') %> Soundcloud <span>></span>
+          <% end %>
+        </li>
+        <li>
+          <%= link_to "http://www.facebook.com/pages/Barcode-Channel/126967277330061", :target => "_blank" do %>
+            <%= image_tag('icons/facebook.png') %> Facebook <span>></span>
+          <% end %>
+        </li>
+        <li>
+          <%= link_to "http://barcodechannel.bandcamp.com/", :target => "_blank" do %>
+            <%= image_tag('icons/bandcamp.png') %> Bandcamp <span>></span>
+          <% end %>
+        </li>
+        <li>
+          <%= link_to "http://www.youtube.com/user/BarcodeChannel", :target => "_blank" do %>
+            <%= image_tag('icons/youtube.png') %> Youtube <span>></span>
+          <% end %>
+        </li>
       </ul>
     </div>
 
