Sexier navigation buttons

--- a/app/views/layouts/client.html.erb
+++ b/app/views/layouts/client.html.erb
@@ -35,10 +35,10 @@
   </div>
   <div class="span-24 last nav_panel">
     <ul class="menu left_offset">
-      <li><%= link_to "NEWS", posts_path %></li>
-      <li><%= link_to "LISTEN", songs_path %></li>
-      <li><%= link_to "IMAGES", photos_path %></li>
-      <li><%= link_to "ABOUT THE BAND", biography_path %></li>
+      <li><%= link_to "News", posts_path %></li>
+      <li><%= link_to "Listen", songs_path %></li>
+      <li><%= link_to "Images", photos_path %></li>
+      <li><%= link_to "About", biography_path %></li>
       <% if current_user %>
         <li><%= link_to 'Subscribers', subscribers_path %></li>
         <li><%= link_to 'Logout, yeah?', logout_path %></li>
