--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -5,12 +5,14 @@ body {
 a {
   color: #FF8100;
   text-decoration: none;
+  font-family: 'Lucida Grande', Helvetica, Arial, sans-serif;
 }
 
 b{
   color: #85B931;
   font-weight: normal;
   font-family: Verdana;
+  font-family: 'Lucida Grande', Helvetica, Arial, sans-serif;
 }
 
 p {
@@ -144,14 +146,40 @@ div.side_panel h4 {
 }
 
 div.inset {
-  border-left: 1px solid #666;
-  padding-left:8px;
+  background-color: #EEE;
   margin-bottom:10px;
+  color: #48494D;
+}
+
+div.inset h4{
+  background-color: #3E3D42;
+  color:#FFFFFF;
+  padding: 5px;
+  border-left: 5px solid #85B931;
 }
 
 div.inset p{
+  padding: 5px 10px;
   font-family: Verdana;
   font-size: 12px;
+}
+
+div.inset a{
+  font-weight:bold;
+}
+
+div.inset ul {
+  margin: 0 ;
+}
+
+div.inset ul.side_nav {
+  width: 200px;
+  padding: 5px 15px;
+  
+  font-family: 'Lucida Grande', Helvetica, Arial, sans-serif;
+}
+div.inset ul.side_nav a {
+  font-weight:normal;
 }
 
 ul.side_nav {
@@ -159,7 +187,6 @@ ul.side_nav {
   padding-bottom: 3px;
   margin: 0;
   list-style: none;
-
 }
 
 ul.side_nav li {
@@ -233,9 +260,4 @@ div#photo_show {
 
 ul {
   padding-left: 30px;
-}
-
-div.inset p{
-  padding-left: 10px;
-ul.menu li a { color:orange; }
 }
