--- a/app/views/static/promo.html.erb
+++ b/app/views/static/promo.html.erb
@@ -4,63 +4,74 @@
   </div>
   <div id="promo_txt" class="post_body">
 
-    <p>
-      We've been checking out your blog and you feature a lot of really good music. Since you seem to like independent/alternative sounds, we thought you might like to check us out.
-    </p>
-    <p>
-      We are <b>Barcode Channel</b>. We are a post punk/indie rock 3-piece with a DIY ethic who write songs around angular guitar lines and programmed beats, drawing influence from artists such as <b>Radiohead</b>, <b>Foals</b>, <b>Bloc Party</b> and <b>Interpol</b>.
-    </p>
-    <p>
-      We put out our debut E.P. <%= link_to "A Ticket Out", "http://barcodechannel.bandcamp.com/album/a-ticket-out?permalink" %> earlier this year, and judging by your blog, we think it might be the sort of thing you're into.
-    </p>
+    <table>
+      <tr>
+        <td>
+          <p>We're <b>Barcode Channel</b>, a small <b>post punk/indie-rock</b> 3-piece band from Cambridge, UK. We spend our time writing and playing songs in our flats, occasionally receiving noise complaints and listening to artists such as <b>Foals</b>, <b>LCD Soundsystem</b>, <b>Bloc Party</b> and <b>Interpol</b>.</p>
 
-    <div class="inset">
-      <h4>Listen to our music</h4>
-      <ul class="side_nav">
-        <li>
-          <%= link_to "http://soundcloud.com/barcode-channel", :target => "_blank" do %>
-            <%= image_tag('http://barcodechannel.com/images/icons/soundcloud.png') %> Soundcloud <span>></span>
-          <% end %>
-        </li>
-        <li>
-          <%= link_to "http://barcodechannel.bandcamp.com/", :target => "_blank" do %>
-            <%= image_tag('http://barcodechannel.com/images/icons/bandcamp.png') %> Bandcamp <span>></span>
-          <% end %>
-        </li>
-      </ul>
-      <h4>Download MP3s</h4>
-      <ul>
-        <li><%= link_to "Feedback Loop", "http://dl.dropbox.com/u/2324263/CurrentMasters/A%20Ticket%20Out/1%20-%20Feedback%20Loop.mp3" %> (single track)</li>
-        <li><%= link_to "Ticket Out", "http://dl.dropbox.com/u/2324263/Barcode%20Channel%20-%20A%20Ticket%20Out.zip" %> (6 track E.P.)</li>
-      </ul>
-                
-      <h4>Press</h4>
-      <p>
-        '<i>... a brilliant sound and an interesting sound ... </i>'<br/>
-        <%= link_to "It's All Indie review of one of our gigs", 'http://its-all-indie.blogspot.com/2011/01/gig-review-ideals-haymakers-26th.html'%>.
-      </p>
-      <p>
-        Our track <%= link_to "Feedback Loop", "http://soundcloud.com/barcode-channel/feedback-loop-1" %> featured as the lead track on their 6 track E.P. of upcoming bands inspired by <b>Foals</b>:<br/>
-        <%= link_to "Foals - A Tribute Forever", 'http://its-all-indie.blogspot.com/2010/11/foals-tribute-forever.html'%>
-      </p>
+          <p>We're proud of our self-produced and self-recorded sound and it seems like we make the sort of music you'd be into.
 
-      <h4>More about us</h4>
-      <p>
-        We've got a full <b>biography/manifesto</b>, <b>news</b>, <b>photos</b> and <b>videos</b> on our website, alongside more relevant links:
-        <ul>
-          <li><%= link_to "BarcodeChannel.com", 'http://barcodechannel.com' %></li>
-        </ul>
-      </p>
-    </div>
+          We recently put out our debut E.P, <%= link_to "A Ticket Out", "http://barcodechannel.bandcamp.com/album/a-ticket-out?permalink" %>; just click the links to the right and we'll take you straight to a stream or if you would prefer, direct download.
+          
+          <p>
+            <i>If you can't see the links that should be to the right of this >> or you just want know more about us, please visit our website for streaming links and downloads:</i></br>
+              <%= link_to "http://barcodechannel.com/" %></br>
+          </p>
+          <h4>What others are saying about us</h4>
+          <div style="padding-left:15px;">
+            <p>
+              '<i>... a brilliant sound and an interesting sound ... </i>'<br/>
+              <%= link_to "It's All Indie gig review", 'http://its-all-indie.blogspot.com/2011/01/gig-review-ideals-haymakers-26th.html'%>.
+            </p>
+            <p>
+              Our track <%= link_to "Feedback Loop", "http://soundcloud.com/barcode-channel/feedback-loop-1" %> featured as the lead track on their 6 track E.P. of upcoming bands inspired by <b>Foals</b>:<br/>
+              <%= link_to "Foals - A Tribute Forever", 'http://its-all-indie.blogspot.com/2010/11/foals-tribute-forever.html'%></br>
+              --
+            </p>
+          </div>
 
-    <p>
-      Thanks for taking the time to listen, and keep up the good work with the blog!
-    </p>
-    <p>
-      <b>Barcode Channel</b>
-    </p>
+          <p>Thanks for taking the time to read about us, it's much appreciated. </p>
+          <p>It would be great to hear from you; email us back if you'd like more information.</p>
+            
+          <p>
+            <b>Barcode Channel</b>
+          </p>
+          <%= link_to image_tag('http://barcodechannel.com/images/BarcodeChannel.png'), 'http://barcodechannel.com/' %>
+        </td>
 
-    <%= link_to image_tag('http://barcodechannel.com/images/BarcodeChannel.png'), 'http://barcodechannel.com/' %>
+        <td>
+          <div class="inset">
+            <h4>Listen to our music</h4>
+            <ul class="side_nav">
+              <li>
+                <%= link_to "http://soundcloud.com/barcode-channel", :target => "_blank" do %>
+                  <%= image_tag('http://barcodechannel.com/images/icons/soundcloud.png') %> Soundcloud <span>></span>
+                <% end %>
+              </li>
+              <li>
+                <%= link_to "http://barcodechannel.bandcamp.com/", :target => "_blank" do %>
+                  <%= image_tag('http://barcodechannel.com/images/icons/bandcamp.png') %> Bandcamp <span>></span>
+                <% end %>
+              </li>
+            </ul>
+            <h4>Download MP3s</h4>
+            <ul>
+              <li><%= link_to "Feedback Loop", "http://dl.dropbox.com/u/2324263/CurrentMasters/A%20Ticket%20Out/1%20-%20Feedback%20Loop.mp3" %> (single track)</li>
+              <li><%= link_to "Ticket Out", "http://dl.dropbox.com/u/2324263/Barcode%20Channel%20-%20A%20Ticket%20Out.zip" %> (6 track E.P.)</li>
+            </ul>
+                      
+
+            <h4>More about us</h4>
+            <p>
+              We've got a full <b>biography/manifesto</b>, <b>news</b>, <b>photos</b> and <b>videos</b> on our website, alongside more relevant links:
+              <ul>
+                <li><%= link_to "BarcodeChannel.com", 'http://barcodechannel.com' %></li>
+              </ul>
+            </p>
+          </div>
+        </td>
+      </tr>
+    </table>
   </div>
 
 </div>
