Song embed links working correctly

--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -3,7 +3,7 @@
 <% @songs.each do |song| %>
   <tr>
     <td><%= link_to song.name, song %></td>
-    <td><%= song.embed %></td>
+    <td><%= raw song.embed %></td>
   </tr>
 <% end %>
 </table>
