--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,10 @@
-<h1>Listing posts</h1>
+<section class='welcome'>
+  <h2>Hi there</h2>
+  <p>We are Barcode Channel, a small independent post-punk(ish) band who sound a bit like Radiohead, Foals and Bloc Party (among many others)</p>
+  <p>If you'd like to hear or download our music, head to the <%= link_to "Listen", songs_path %> page</p>
+</section>
+
+<h1>News</h1>
 
 <table>
 <% @posts.each do |post| %>
