--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
       </ul>
     </nav>
 
-    <div class="main-content" style="width:600px;float:left;overflow:hidden;">
+    <div class="main-content">
       <%= yield %>
     </div>
     <div class="side_nav" style="width:300px;float:right; overflow:hidden;">
