--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
       <%= yield %>
     </div>
     <div class="side_nav" style="width:300px;float:right; overflow:hidden;">
-      side-nav
+      Can haz side navigation? kthxbye
     </div>
 
   </div>
