--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,11 +18,11 @@
       </ul>
     </nav>
 
-    <div class="main-content">
+    <div id="main-content">
       <%= yield %>
     </div>
-    <div class="side_nav" style="width:300px;float:right; overflow:hidden;">
-      Can haz side navigation? kthxbye
+    <div id="side-nav" style="width:300px;float:right; overflow:hidden;">
+      <h3>Can haz side navigation? kthxbye</h3>
     </div>
 
   </div>
