--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -22,6 +22,7 @@ body {
 }
 
 div#main-content {
+  margin-top: 5px;
   top: 5px;
   width:600px;
   float:left;
@@ -33,6 +34,42 @@ div#side-nav {
   position:relative;
   top: -6px;
   background-color: $darkest-grey;
+
+  ul#ext-links {
+    a li {
+      color:white;
+      list-style:none;
+    }
+    span {
+      padding: 5px;
+      font-size: 15px;
+
+      background: rgb(133,185,49); /* Old browsers */
+      background: -moz-linear-gradient(top, rgba(133,185,49,1) 0%, rgba(100,142,16,1) 100%); /* FF3.6+ */
+      background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(133,185,49,1)), color-stop(100%,rgba(100,142,16,1))); /* Chrome,Safari4+ */
+      background: -webkit-linear-gradient(top, rgba(133,185,49,1) 0%,rgba(100,142,16,1) 100%); /* Chrome10+,Safari5.1+ */
+      background: -o-linear-gradient(top, rgba(133,185,49,1) 0%,rgba(100,142,16,1) 100%); /* Opera 11.10+ */
+      background: -ms-linear-gradient(top, rgba(133,185,49,1) 0%,rgba(100,142,16,1) 100%); /* IE10+ */
+      background: linear-gradient(top, rgba(133,185,49,1) 0%,rgba(100,142,16,1) 100%); /* W3C */
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#85b931', endColorstr='#648e10',GradientType=0 ); /* IE6-9 */
+
+    }
+    span.logo {
+      background: rgb(125,126,125); /* Old browsers */
+      background: -moz-linear-gradient(top, rgba(125,126,125,1) 0%, rgba(14,14,14,1) 100%); /* FF3.6+ */
+      background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(125,126,125,1)), color-stop(100%,rgba(14,14,14,1))); /* Chrome,Safari4+ */
+      background: -webkit-linear-gradient(top, rgba(125,126,125,1) 0%,rgba(14,14,14,1) 100%); /* Chrome10+,Safari5.1+ */
+      background: -o-linear-gradient(top, rgba(125,126,125,1) 0%,rgba(14,14,14,1) 100%); /* Opera 11.10+ */
+      background: -ms-linear-gradient(top, rgba(125,126,125,1) 0%,rgba(14,14,14,1) 100%); /* IE10+ */
+      background: linear-gradient(top, rgba(125,126,125,1) 0%,rgba(14,14,14,1) 100%); /* W3C */
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7d7e7d', endColorstr='#0e0e0e',GradientType=0 ); /* IE6-9 */
+
+      img {
+        position: relative;
+        top: 7px;
+      }
+    }
+  }
 }
 
 nav.main_nav {
