Really nice button gradients

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -44,15 +44,21 @@ div#side-nav {
       padding: 5px;
       font-size: 15px;
 
-      background: rgb(133,185,49); /* Old browsers */
-      background: -moz-linear-gradient(top, rgba(133,185,49,1) 0%, rgba(100,142,16,1) 100%); /* FF3.6+ */
-      background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(133,185,49,1)), color-stop(100%,rgba(100,142,16,1))); /* Chrome,Safari4+ */
-      background: -webkit-linear-gradient(top, rgba(133,185,49,1) 0%,rgba(100,142,16,1) 100%); /* Chrome10+,Safari5.1+ */
-      background: -o-linear-gradient(top, rgba(133,185,49,1) 0%,rgba(100,142,16,1) 100%); /* Opera 11.10+ */
-      background: -ms-linear-gradient(top, rgba(133,185,49,1) 0%,rgba(100,142,16,1) 100%); /* IE10+ */
-      background: linear-gradient(top, rgba(133,185,49,1) 0%,rgba(100,142,16,1) 100%); /* W3C */
-      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#85b931', endColorstr='#648e10',GradientType=0 ); /* IE6-9 */
-
+background: rgb(170,221,59); /* Old browsers */
+background: -moz-linear-gradient(top, rgba(170,221,59,1) 0%, rgba(133,185,49,1) 51%, rgba(91,130,15,1) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(170,221,59,1)), color-stop(51%,rgba(133,185,49,1)), color-stop(100%,rgba(91,130,15,1))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top, rgba(170,221,59,1) 0%,rgba(133,185,49,1) 51%,rgba(91,130,15,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top, rgba(170,221,59,1) 0%,rgba(133,185,49,1) 51%,rgba(91,130,15,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top, rgba(170,221,59,1) 0%,rgba(133,185,49,1) 51%,rgba(91,130,15,1) 100%); /* IE10+ */
+background: linear-gradient(top, rgba(170,221,59,1) 0%,rgba(133,185,49,1) 51%,rgba(91,130,15,1) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#aadd3b', endColorstr='#5b820f',GradientType=0 ); /* IE6-9 */
+      
+      -moz-border-radius-topleft: 0px;
+      -moz-border-radius-topright: 5px;
+      -moz-border-radius-bottomright: 5px;
+      -moz-border-radius-bottomleft: 0px;
+      -webkit-border-radius: 0px 5px 5px 0px;
+      border-radius: 0px 5px 5px 0px;
     }
     span.logo {
       background: rgb(125,126,125); /* Old browsers */
@@ -63,6 +69,13 @@ div#side-nav {
       background: -ms-linear-gradient(top, rgba(125,126,125,1) 0%,rgba(14,14,14,1) 100%); /* IE10+ */
       background: linear-gradient(top, rgba(125,126,125,1) 0%,rgba(14,14,14,1) 100%); /* W3C */
       filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7d7e7d', endColorstr='#0e0e0e',GradientType=0 ); /* IE6-9 */
+
+      -moz-border-radius-topleft: 5px;
+      -moz-border-radius-topright: 0px;
+      -moz-border-radius-bottomright: 0px;
+      -moz-border-radius-bottomleft: 5px;
+      -webkit-border-radius: 5px 0px 0px 5px;
+      border-radius: 5px 0px 0px 5px;
 
       img {
         position: relative;
