Nicer side links

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -11,7 +11,7 @@ $link_color: #FF8100;
 body {
   background-color: $light_grey;
   > div.container {
-    border: 1px solid #363636;
+    border: 1px solid #333;
 
     -moz-box-shadow: 0 1px 50px #222;
     -webkit-box-shadow: 0 1px 50px #222;
@@ -19,6 +19,12 @@ body {
 
     background-color: $dark_grey;
   }
+}
+
+.shadowed {
+  -webkit-box-shadow: 3px 3px 15px #333;
+  -moz-box-shadow: 3px 3px 15px #333;
+  box-shadow: 3px 3px 15px #333;
 }
 
 div#main-content {
@@ -36,23 +42,36 @@ div#side-nav {
   background-color: $darkest-grey;
 
   ul#ext-links {
+    margin-left: 10px;
     a li {
       color:white;
+      font-size:16px;
       list-style:none;
+
+      margin: 5px;
+
+      overflow:hidden;
+
+      -webkit-box-shadow: 3px 3px 15px #333;
+      -moz-box-shadow: 3px 3px 15px #333;
+      box-shadow: 3px 3px 15px #333;
     }
     span {
       padding: 5px;
-      font-size: 15px;
 
-background: rgb(170,221,59); /* Old browsers */
-background: -moz-linear-gradient(top, rgba(170,221,59,1) 0%, rgba(133,185,49,1) 51%, rgba(91,130,15,1) 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(170,221,59,1)), color-stop(51%,rgba(133,185,49,1)), color-stop(100%,rgba(91,130,15,1))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top, rgba(170,221,59,1) 0%,rgba(133,185,49,1) 51%,rgba(91,130,15,1) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top, rgba(170,221,59,1) 0%,rgba(133,185,49,1) 51%,rgba(91,130,15,1) 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top, rgba(170,221,59,1) 0%,rgba(133,185,49,1) 51%,rgba(91,130,15,1) 100%); /* IE10+ */
-background: linear-gradient(top, rgba(170,221,59,1) 0%,rgba(133,185,49,1) 51%,rgba(91,130,15,1) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#aadd3b', endColorstr='#5b820f',GradientType=0 ); /* IE6-9 */
-      
+      float:left;
+      width: 200px;
+      height: 19px;
+
+      background: rgb(170,221,59); /* Old browsers */
+      background: -moz-linear-gradient(top, rgba(170,221,59,1) 0%, rgba(133,185,49,1) 51%, rgba(91,130,15,1) 100%); /* FF3.6+ */
+      background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(170,221,59,1)), color-stop(51%,rgba(133,185,49,1)), color-stop(100%,rgba(91,130,15,1))); /* Chrome,Safari4+ */
+      background: -webkit-linear-gradient(top, rgba(170,221,59,1) 0%,rgba(133,185,49,1) 51%,rgba(91,130,15,1) 100%); /* Chrome10+,Safari5.1+ */
+      background: -o-linear-gradient(top, rgba(170,221,59,1) 0%,rgba(133,185,49,1) 51%,rgba(91,130,15,1) 100%); /* Opera 11.10+ */
+      background: -ms-linear-gradient(top, rgba(170,221,59,1) 0%,rgba(133,185,49,1) 51%,rgba(91,130,15,1) 100%); /* IE10+ */
+      background: linear-gradient(top, rgba(170,221,59,1) 0%,rgba(133,185,49,1) 51%,rgba(91,130,15,1) 100%); /* W3C */
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#aadd3b', endColorstr='#5b820f',GradientType=0 ); /* IE6-9 */
+
       -moz-border-radius-topleft: 0px;
       -moz-border-radius-topright: 5px;
       -moz-border-radius-bottomright: 5px;
@@ -61,6 +80,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#aadd3b', end
       border-radius: 0px 5px 5px 0px;
     }
     span.logo {
+      width: 24px;
+
       background: rgb(125,126,125); /* Old browsers */
       background: -moz-linear-gradient(top, rgba(125,126,125,1) 0%, rgba(14,14,14,1) 100%); /* FF3.6+ */
       background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(125,126,125,1)), color-stop(100%,rgba(14,14,14,1))); /* Chrome,Safari4+ */
@@ -78,10 +99,11 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#aadd3b', end
       border-radius: 5px 0px 0px 5px;
 
       img {
-        position: relative;
-        top: 7px;
+        position:relative;
+        top: -3px;
       }
     }
+
   }
 }
 
