--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -20,7 +20,7 @@ section.welcome {
   padding: 5px 13px;
   border-radius: 8px;
 
-  border: 1px solid #48494D;
+  border: 1px solid #333;
   color: $dark_text;
 
   h2{
