--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,11 +7,13 @@
 <h1>News</h1>
 
 <table>
-<% @posts.each do |post| %>
-  <tr>
-    <td><%= link_to post.title, post %></td>
-    <td><%= raw post.body %></td>
-  </tr>
+<% cache("posts-index") do %> 
+  <% @posts.each do |post| %>
+    <tr>
+      <td><%= link_to post.title, post %></td>
+      <td><%= raw post.body %></td>
+    </tr>
+  <% end %>
 <% end %>
 </table>
 
